# robinhoodassistant

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: RUNBOOK.md
docs/ops/: README.md
docs/superpowers/specs/: 2026-07-09-agentic-trading-assistant-design.md  2026-07-09-phase-7-backtesting-design.md  2026-07-10-phase-8-trade-plans-design.md
scripts/: start.sh  stop.sh
scripts/launchd/: README.md  com.trading.app.plist  com.trading.daemon.plist  install.sh  uninstall.sh
src/trading_assistant/: __init__.py  assets.py  config.py  logging.py  preflight.py  service.py  validate_analyst.py
src/trading_assistant/analyst/: __init__.py  accuracy.py  analyst.py  digest.py  news.py  (+9 more)
tests/: conftest.py  test_agent.py  test_alpaca_broker.py  test_alpaca_paper_integration.py  test_analyst.py  test_analyst_v2.py  test_api.py  test_asset_class.py  test_atomic_approval.py  test_backtest_engine.py  test_backtest_evaluate.py  test_backtests_api.py  test_config.py  test_db_models.py  test_execution.py  test_external_accounts.py  test_factory.py  test_hardening.py  test_killswitch.py  test_launch.py  test_launch_features.py  test_llm_backends.py  test_llm_runner.py  test_market_hours.py  test_marketdata.py  test_mcp_tools.py  test_mock_broker.py  test_monitor.py  test_news.py  test_order_state_machine.py  test_plan_rules.py  test_planning.py  test_plans_api.py  test_pnl.py  test_risk_engine.py  test_rules_engine.py  test_scorecard.py  test_screener.py  test_security.py  test_service.py  (+5 more)
tests/stress/: test_stress_scenarios.py
(+74 files in other folders)
