[project]
name = "trading-assistant"
version = "0.1.0"
description = "LLM-driven agentic trading assistant (Alpaca, MCP). Human-gated, risk-enforced."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
# Broker / server / app deps land in later phases; kept optional so Phase 1
# installs and tests with zero network-capable packages.
broker = ["alpaca-py>=0.21"]
mcp = ["mcp>=1.2"]
app = ["fastapi>=0.110", "uvicorn>=0.29", "anthropic>=0.39"]
notify = ["python-telegram-bot>=21"]
# Phase 7: signals + backtesting.
analysis = ["pandas>=2.1", "numpy>=1.26", "pyarrow>=15.0"]
# Read-only Robinhood external source (community lib; pin compatible within 3.x).
external = ["robin_stocks>=3.4,<4", "pyotp>=2.9,<3"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_assistant"]
